refactor/relative-paths

--- a/Essen_Blog-Seite.html
+++ b/Essen_Blog-Seite.html
@@ -15,7 +15,7 @@
     <header>
         <nav aria-label="Hauptnavigation">
             <a href="index.html" class="logo">
-                <img src="/Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
+                <img src="Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
             </a>
 
             <!-- Burger-Menü Button -->
@@ -26,10 +26,10 @@
             </div>
 
             <ul class="nav-links">
-                <li><a href="/Essen_Blog-Seite.html">Essen</a></li>
-                <li><a href="/Reisen_Blog-Seite.html">Reisen</a></li>
-                <li><a href="/Inspiration_Galerie.html">Inspiration</a></li>
-                <li><a href="/Kontakt.html">Kontakt</a></li>
+                <li><a href="Essen_Blog-Seite.html">Essen</a></li>
+                <li><a href="Reisen_Blog-Seite.html">Reisen</a></li>
+                <li><a href="Inspiration_Galerie.html">Inspiration</a></li>
+                <li><a href="Kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
         <div class="page-title">
@@ -46,7 +46,7 @@
         <section class="blog-grid">
             <!-- Kalte Nudeln -->
             <article class="blog-card">
-                <img src="/Assets/Kalte_Nudeln.jpeg" alt="Holzschale mit breiten Weizennudeln, Gemüse und Tofu"
+                <img src="Assets/Kalte_Nudeln.jpeg" alt="Holzschale mit breiten Weizennudeln, Gemüse und Tofu"
                     title="Traditionelle kalte Weizennudeln mit Gemüse und Tofu">
                 <div class="blog-card-content">
                     <h2>Kalte Nudeln</h2>
@@ -56,7 +56,7 @@
             </article>
             <!-- Koreanisches BBQ -->
             <article class="blog-card">
-                <img src="/Assets/Korean-BBQ.jpeg"
+                <img src="Assets/Korean-BBQ.jpeg"
                     alt="Tisch mit eingebautem Grill, auf dem Gemüse und Fleisch gegrillt werden"
                     title="Koreanisches BBQ – Fleisch und Gemüse direkt am Tisch grillen">
                 <div class="blog-card-content">
@@ -69,7 +69,7 @@
             </article>
             <!-- Nudelsuppe -->
             <article class="blog-card">
-                <img src="/Assets/Nudelsuppe.jpeg"
+                <img src="Assets/Nudelsuppe.jpeg"
                     alt="Tisch mit Holzbrücke als Servierplatte und einer großen Schüssel heller Brühe"
                     title="Vietnamesisch inspirierte Nudelsuppe aus Südchina">
                 <div class="blog-card-content">
@@ -82,7 +82,7 @@
             </article>
             <!-- Fleischtöpfe -->
             <article class="blog-card">
-                <img src="/Assets/Changsha.jpeg"
+                <img src="Assets/Changsha.jpeg"
                     alt="Vier große Schüsseln mit verschiedenen chinesischen Fleisch- und Gemüsegerichten"
                     title="Chinesische Fleischtöpfe aus Changsha">
                 <div class="blog-card-content">
@@ -101,8 +101,8 @@
     <footer>
         <nav aria-label="Footer-Navigation">
             <ul>
-                <li><a href="/Kontakt.html">Impressum</a></li>
-                <li><a href="/Kontakt.html">Kontakt</a></li>
+                <li><a href="Kontakt.html">Impressum</a></li>
+                <li><a href="Kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
         <p>&copy; 2024 Patrick – 4 Years in China</p>
