--- a/Kontakt.html
+++ b/Kontakt.html
@@ -15,7 +15,7 @@
     <header>
         <nav aria-label="Hauptnavigation">
             <a href="index.html" class="logo">
-                <img src="/Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
+                <img src="Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
             </a>
     
             <!-- Burger-Menü Button -->
@@ -26,10 +26,10 @@
             </div>
     
             <ul class="nav-links">
-                <li><a href="/Essen_Blog-Seite.html">Essen</a></li>
-                <li><a href="/Reisen_Blog-Seite.html">Reisen</a></li>
-                <li><a href="/Inspiration_Galerie.html">Inspiration</a></li>
-                <li><a href="/Kontakt.html">Kontakt</a></li>
+                <li><a href="Essen_Blog-Seite.html">Essen</a></li>
+                <li><a href="Reisen_Blog-Seite.html">Reisen</a></li>
+                <li><a href="Inspiration_Galerie.html">Inspiration</a></li>
+                <li><a href="Kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
         <div class="page-title">
@@ -78,31 +78,31 @@
                     <li>
                         <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"
                             aria-label="Mein Facebook-Profil">
-                            <img src="/Assets/Facebook.png" alt="Facebook-Logo">
+                            <img src="Assets/Facebook.png" alt="Facebook-Logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer"
                             aria-label="Mein X (Twitter)-Profil">
-                            <img src="/Assets/X.png" alt="X (Twitter)-Logo">
+                            <img src="Assets/X.png" alt="X (Twitter)-Logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.whatsapp.com/" target="_blank" rel="noopener noreferrer"
                             aria-label="Mein WhatsApp-Profil">
-                            <img src="/Assets/Whatsapp.png" alt="WhatsApp-Logo">
+                            <img src="Assets/Whatsapp.png" alt="WhatsApp-Logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"
                             aria-label="Mein Instagram-Profil">
-                            <img src="/Assets/Instagram.png" alt="Instagram-Logo">
+                            <img src="Assets/Instagram.png" alt="Instagram-Logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"
                             aria-label="Mein LinkedIn-Profil">
-                            <img src="/Assets/Linkedin.png" alt="LinkedIn-Logo">
+                            <img src="Assets/Linkedin.png" alt="LinkedIn-Logo">
                         </a>
                     </li>
                 </ul>
@@ -117,8 +117,8 @@
         <footer>
             <nav aria-label="Footer-Navigation">
                 <ul>
-                    <li><a href="/Kontakt.html">Impressum</a></li>
-                    <li><a href="/Kontakt.html">Kontakt</a></li>
+                    <li><a href="Kontakt.html">Impressum</a></li>
+                    <li><a href="Kontakt.html">Kontakt</a></li>
                 </ul>
             </nav>
             <p>&copy; 2024 Patrick – 4 Years in China</p>
