--- a/Reisen_Blog-Seite.html
+++ b/Reisen_Blog-Seite.html
@@ -15,7 +15,7 @@
     <header>
         <nav aria-label="Hauptnavigation">
             <a href="index.html" class="logo">
-                <img src="/Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
+                <img src="Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
             </a>
     
             <!-- Burger-Menü Button -->
@@ -26,10 +26,10 @@
             </div>
     
             <ul class="nav-links">
-                <li><a href="/Essen_Blog-Seite.html">Essen</a></li>
-                <li><a href="/Reisen_Blog-Seite.html">Reisen</a></li>
-                <li><a href="/Inspiration_Galerie.html">Inspiration</a></li>
-                <li><a href="/Kontakt.html">Kontakt</a></li>
+                <li><a href="Essen_Blog-Seite.html">Essen</a></li>
+                <li><a href="Reisen_Blog-Seite.html">Reisen</a></li>
+                <li><a href="Inspiration_Galerie.html">Inspiration</a></li>
+                <li><a href="Kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
         <div class="page-title">
@@ -46,7 +46,7 @@
         <section class="blog-grid">
             <!-- Philipinen -->
             <article class="blog-card">
-                <img src="/Assets/Philipinen.jpeg"
+                <img src="Assets/Philipinen.jpeg"
                     alt="Tropischer Strand mit zwei Bäumen, die eine Hängematte beschatten"
                     title="Strand auf den Philippinen mit Hängematte und Liegen">
                 <div class="blog-card-content">
@@ -58,7 +58,7 @@
             </article>
             <!-- Taiwan -->
             <article class="blog-card">
-                <img src="/Assets/Taipeh.jpeg"
+                <img src="Assets/Taipeh.jpeg"
                     alt="Aussicht von einer Terrasse auf die Skyline von Taipeh mit Bergen im Hintergrund"
                     title="Blick auf Taipeh von einer Aussichtsterrasse">
                 <div class="blog-card-content">
@@ -69,7 +69,7 @@
             </article>
             <!-- Tokio -->
             <article class="blog-card">
-                <img src="/Assets/Tokio.jpeg"
+                <img src="Assets/Tokio.jpeg"
                     alt="Menschen in einer Einkaufsstraße mit japanischen Schriftzeichen, im Hintergrund der Fernsehturm von Tokio"
                     title="Einkaufsstraße in Tokio mit vielen Menschen">
                 <div class="blog-card-content">
@@ -81,7 +81,7 @@
             </article>
             <!-- Bangkok -->
             <article class="blog-card">
-                <img src="/Assets/Bangkok.jpeg"
+                <img src="Assets/Bangkok.jpeg"
                     alt="Bunte Marktstände mit Sonnenschirmen in einer Einkaufsstraße in Bangkok"
                     title="Markt in Bangkok mit vielen bunten Ständen">
                 <div class="blog-card-content">
@@ -100,8 +100,8 @@
     <footer>
         <nav aria-label="Footer-Navigation">
             <ul>
-                <li><a href="/Kontakt.html">Impressum</a></li>
-                <li><a href="/Kontakt.html">Kontakt</a></li>
+                <li><a href="Kontakt.html">Impressum</a></li>
+                <li><a href="Kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
         <p>&copy; 2024 Patrick – 4 Years in China</p>
