--- a/Inspiration_Galerie.html
+++ b/Inspiration_Galerie.html
@@ -15,7 +15,7 @@
     <header>
         <nav aria-label="Hauptnavigation">
             <a href="index.html" class="logo">
-                <img src="/Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
+                <img src="Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
             </a>
 
             <!-- Burger-Menü Button -->
@@ -26,10 +26,10 @@
             </div>
 
             <ul class="nav-links">
-                <li><a href="/Essen_Blog-Seite.html">Essen</a></li>
-                <li><a href="/Reisen_Blog-Seite.html">Reisen</a></li>
-                <li><a href="/Inspiration_Galerie.html">Inspiration</a></li>
-                <li><a href="/Kontakt.html">Kontakt</a></li>
+                <li><a href="Essen_Blog-Seite.html">Essen</a></li>
+                <li><a href="Reisen_Blog-Seite.html">Reisen</a></li>
+                <li><a href="Inspiration_Galerie.html">Inspiration</a></li>
+                <li><a href="Kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
         <div class="page-title">
@@ -44,77 +44,77 @@
     <main>
         <div class="row">
             <div class="column">
-                <img src="/Assets/Taipeh.jpeg"
+                <img src="Assets/Taipeh.jpeg"
                     alt="Aussicht von einer Terrasse auf die Skyline von Taipeh mit Bergen im Hintergrund"
                     title="Blick auf Taipeh von einer Aussichtsterrasse">
-                <img src="/Assets/Bangkok.jpeg"
+                <img src="Assets/Bangkok.jpeg"
                     alt="Bunte Marktstände mit Sonnenschirmen in einer Einkaufsstraße in Bangkok"
                     title="Markt in Bangkok mit vielen bunten Ständen">
-                <img src="/Assets/Philipinen.jpeg"
+                <img src="Assets/Philipinen.jpeg"
                     alt="Tropischer Strand mit zwei Bäumen, die eine Hängematte beschatten"
                     title="Strand auf den Philippinen mit Hängematte und Liegen">
-                <img src="/Assets/Korean-BBQ.jpeg"
+                <img src="Assets/Korean-BBQ.jpeg"
                     alt="Tisch mit eingebautem Grill, auf dem Gemüse und Fleisch gegrillt werden"
                     title="Koreanisches BBQ – Fleisch und Gemüse direkt am Tisch grillen">
-                <img src="/Assets/Nudelsuppe.jpeg"
+                <img src="Assets/Nudelsuppe.jpeg"
                     alt="Tisch mit Holzbrücke als Servierplatte und einer großen Schüssel heller Brühe"
                     title="Vietnamesisch inspirierte Nudelsuppe aus Südchina">
-                <img src="/Assets/Changsha.jpeg"
+                <img src="Assets/Changsha.jpeg"
                     alt="Vier große Schüsseln mit verschiedenen chinesischen Fleisch- und Gemüsegerichten"
                     title="Chinesische Fleischtöpfe aus Changsha">
-                <img src="/Assets/Sushi-Frühstück.jpeg"
+                <img src="Assets/Sushi-Frühstück.jpeg"
                     alt="Sushi-Frühstück mit grünem Tee, Sojasoße und Bier auf einem Holztisch"
                     title="Japanisches Sushi-Frühstück mit Thunfisch und verschiedenen Sushi-Variationen">
-                <img src="/Assets/Shanghai-BBQ.jpeg"
+                <img src="Assets/Shanghai-BBQ.jpeg"
                     alt="Teller mit gegrillten Fleischspießen, Garnelen und Beilagen auf einem rustikalen Holztisch"
                     title="Shanghai BBQ mit gegrilltem Fleisch, Garnelen und Kichererbsendipp">
             </div>
             <div class="column">
-                <img src="/Assets/Bali-Pool.jpeg"
+                <img src="Assets/Bali-Pool.jpeg"
                     alt="Sonnenliegen neben einem Pool mit Blick auf einen tropischen Wald"
                     title="Pool-Terrasse auf Bali mit Blick ins Grüne">
-                <img src="/Assets/Fisch.jpeg"
+                <img src="Assets/Fisch.jpeg"
                     alt="Nahaufnahme von zwei Gunkan-Makis mit kleinen weißen Fischen als Füllung"
                     title="Japanische Gunkan-Makis mit frischen weißen Fischen">
-                <img src="/Assets/Korean-Streetfood.jpeg"
+                <img src="Assets/Korean-Streetfood.jpeg"
                     alt="Koreanisches Streetfood mit mariniertem Gemüse, Makirollen und Reisnudeln"
                     title="Koreanisches Streetfood auf einem Markt">
-                <img src="/Assets/Wan-Tan-Suppe.jpeg"
+                <img src="Assets/Wan-Tan-Suppe.jpeg"
                     alt="Frau isst Wan-Tan-Suppe aus einer blau-weißen Schüssel mit Essstäbchen und Löffel"
                     title="Traditionelle Wan-Tan-Suppe">
-                <img src="/Assets/Fleischverkauf.jpeg"
+                <img src="Assets/Fleischverkauf.jpeg"
                     alt="Straßenstand mit aufgehängten Hühnern, Würsten und fettigen Fleischstücken"
                     title="Straßenverkauf von Fleisch in einer Garage">
-                <img src="/Assets/Tokio-Kultur.jpeg"
+                <img src="Assets/Tokio-Kultur.jpeg"
                     alt="Rote traditionelle Gebäude um einen Platz mit Touristen in Japan"
                     title="Traditionelle japanische Architektur in Tokio">
-                <img src="/Assets/Bangkok-Blumenmarkt.jpeg"
+                <img src="Assets/Bangkok-Blumenmarkt.jpeg"
                     alt="Große Markthalle in Bangkok mit vielen Menschen und Verkaufsständen"
                     title="Blumenmarkt in Bangkok">
-                <img src="/Assets/Shanghai_Skyline.jpeg"
+                <img src="Assets/Shanghai_Skyline.jpeg"
                     alt="Blick von einem Hochhaus auf den Oriental-Pearl-Tower in Shanghai"
                     title="Shanghai Skyline mit dem Oriental-Pearl-Tower">
             </div>
             <div class="column">
-                <img src="/Assets/Kalte_Nudeln.jpeg" alt="Holzschale mit breiten Weizennudeln, Gemüse und Tofu"
+                <img src="Assets/Kalte_Nudeln.jpeg" alt="Holzschale mit breiten Weizennudeln, Gemüse und Tofu"
                     title="Traditionelle kalte Weizennudeln mit Gemüse und Tofu">
-                <img src="/Assets/Syndey_Hafen.jpeg"
+                <img src="Assets/Syndey_Hafen.jpeg"
                     alt="Sydney Hafen bei Nacht mit bunten Lichtern und reflektierendem Wasser"
                     title="Hafenansicht von Sydney in der Abenddämmerung">
-                <img src="/Assets/Suzhou_Mall.jpeg" alt="Sonnenuntergang über einer Einkaufsstraße mit hohen Gebäuden"
+                <img src="Assets/Suzhou_Mall.jpeg" alt="Sonnenuntergang über einer Einkaufsstraße mit hohen Gebäuden"
                     title="Sonnenuntergang über Suzhou">
-                <img src="/Assets/Teeanbau.jpeg" alt="Teefelder auf einem Hügel mit bewaldeten Bergen im Hintergrund"
+                <img src="Assets/Teeanbau.jpeg" alt="Teefelder auf einem Hügel mit bewaldeten Bergen im Hintergrund"
                     title="Teeplantagen in Asien">
-                <img src="/Assets/Hainan_Beach.jpeg"
+                <img src="Assets/Hainan_Beach.jpeg"
                     alt="Langer leerer Sandstrand mit Meer und grünen Hügeln auf Hainan"
                     title="Traumhafter Strand auf Hainan">
-                <img src="/Assets/Scharfe-Nudeln.jpeg"
+                <img src="Assets/Scharfe-Nudeln.jpeg"
                     alt="Braune Nudelschüssel mit dicken Nudeln, Gemüse, Fleisch und roter Chilipaste"
                     title="Chinesische scharfe Nudeln mit Chili und Fleisch">
-                <img src="/Assets/Tokio.jpeg"
+                <img src="Assets/Tokio.jpeg"
                     alt="Menschen in einer belebten Einkaufsstraße in Tokio mit japanischen Schriftzeichen"
                     title="Einkaufsstraße in Tokio mit Menschenmengen">
-                <img src="/Assets/Nachtisch.jpeg"
+                <img src="Assets/Nachtisch.jpeg"
                     alt="Schokoladenkugel mit Vanilleeis und Apfelkuchen mit Vanillesoße auf einem Holztisch"
                     title="Japanisches Dessert mit Schokoladenkugel und Apfelkuchen">
             </div>
@@ -127,8 +127,8 @@
     <footer>
         <nav aria-label="Footer-Navigation">
             <ul>
-                <li><a href="/Kontakt.html">Impressum</a></li>
-                <li><a href="/Kontakt.html">Kontakt</a></li>
+                <li><a href="Kontakt.html">Impressum</a></li>
+                <li><a href="Kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
         <p>&copy; 2024 Patrick – 4 Years in China</p>
