--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <nav aria-label="Hauptnavigation">
       <a href="index.html" class="logo">
-        <img src="/Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
+        <img src="Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
       </a>
 
       <!-- Burger-Menü Button -->
@@ -26,14 +26,14 @@
     </div>
 
       <ul class="nav-links">
-        <li><a href="/Essen_Blog-Seite.html">Essen</a></li>
-        <li><a href="/Reisen_Blog-Seite.html">Reisen</a></li>
-        <li><a href="/Inspiration_Galerie.html">Inspiration</a></li>
-        <li><a href="/Kontakt.html">Kontakt</a></li>
+        <li><a href="Essen_Blog-Seite.html">Essen</a></li>
+        <li><a href="Reisen_Blog-Seite.html">Reisen</a></li>
+        <li><a href="Inspiration_Galerie.html">Inspiration</a></li>
+        <li><a href="Kontakt.html">Kontakt</a></li>
       </ul>
     </nav>
     <div class="hero">
-      <img src="/Assets/Heroimage_China.jpeg" alt="Hero-Bild von China mit Stadtansicht" title="Hero-Bild China">
+      <img src="Assets/Heroimage_China.jpeg" alt="Hero-Bild von China mit Stadtansicht" title="Hero-Bild China">
       <div class="hero-text">
         <h1>4 Years in China</h1>
         <p>Die schönsten Reiseziele und das leckerste Essen</p>
@@ -46,7 +46,7 @@
 
     <!-- Über mich -->
     <section class="about-me">
-      <img src="/Assets/Me.jpeg" alt="Portraitfoto von Patrick" title="EIn Foto von Patrick">
+      <img src="Assets/Me.jpeg" alt="Portraitfoto von Patrick" title="EIn Foto von Patrick">
       <div class="about-me-text">
         <h2>Hi, ich bin Patrick</h2>
         <p>Von 2018 bis 2022 habe ich als Expat in Shanghai gelebt. Meine Leidenschaft ist das Reisen und natürlich
@@ -63,7 +63,7 @@
     <!-- Reisen -->
     <section class="content-section-startpage">
       <div class="content-image-startpage">
-        <img src="/Assets/Suzhou_Mall.jpeg" alt="Sonnenuntergang über einer Einkaufsstraße mit hohen Gebäuden"
+        <img src="Assets/Suzhou_Mall.jpeg" alt="Sonnenuntergang über einer Einkaufsstraße mit hohen Gebäuden"
           title="Sonnenuntergang über Suzhou">
       </div>
       <div class="content-text-startpage">
@@ -72,7 +72,7 @@
           Provinzen unterscheiden sich landschaftlich wie kulturell. Und von Shanghai aus ist man innerhalb weniger
           Stunden
           in Japan, Vietnam, Korea, und und und...</p>
-        <a href="/Reisen_Blog-Seite.html">
+        <a href="Reisen_Blog-Seite.html">
           <button type="button">Alle Reiseziele</button>
         </a>
       </div>
@@ -81,7 +81,7 @@
     <!-- Essen -->
     <section class="content-section-startpage">
       <div class="content-image-startpage">
-        <img src="/Assets/Essen.jpeg" alt="Tisch mit drehbarer Glasplatte und verschiedenen chinesischen Gerichten"
+        <img src="Assets/Essen.jpeg" alt="Tisch mit drehbarer Glasplatte und verschiedenen chinesischen Gerichten"
           title="Traditionelle chinesische Speisen auf einem großen Tisch">
       </div>
       <div class="content-text-startpage">
@@ -89,7 +89,7 @@
         <p>Von traditionellen Gerichten über Fast Food und Fusion-Food bis hin zu Fine-Dine aus aller Herren Länder. 24
           Stunden, 7 Tage die Woche, geliefert oder im Restaurant. Asien bietet, was der Gaumen begehrt und das Herz
           glücklich macht.</p>
-        <a href="/Essen_Blog-Seite.html">
+        <a href="Essen_Blog-Seite.html">
           <button type="button">Das beste Essen</button>
         </a>
       </div>
@@ -98,7 +98,7 @@
     <!-- Inspiration -->
     <section class="content-section-startpage">
       <div class="content-image-startpage">
-        <img src="/Assets/Shanghai-BBQ.jpeg"
+        <img src="Assets/Shanghai-BBQ.jpeg"
           alt="Teller mit gegrillten Fleischspießen, Garnelen und Beilagen auf einem rustikalen Holztisch"
           title="Shanghai BBQ mit gegrilltem Fleisch, Garnelen und Kichererbsendipp">
       </div>
@@ -108,7 +108,7 @@
           bis zu stillen Tempelhöfen, von der Dynamik der Metropolen bis zur Ruhe der Natur.
           Lass dich treiben, entdecke neue Perspektiven und finde deine eigene Inspiration in diesen visuellen
           Eindrücken.</p>
-        <a href="/Essen_Blog-Seite.html">
+        <a href="Inspiration_Galerie.html">
           <button type="button">Inspiration</button>
         </a>
       </div>
@@ -120,8 +120,8 @@
   <footer>
     <nav aria-label="Footer-Navigation">
       <ul>
-        <li><a href="/Kontakt.html">Impressum</a></li>
-        <li><a href="/Kontakt.html">Kontakt</a></li>
+        <li><a href="Kontakt.html">Impressum</a></li>
+        <li><a href="Kontakt.html">Kontakt</a></li>
       </ul>
     </nav>
     <p>&copy; 2024 Patrick – 4 Years in China</p>
