feat: make header sticky for improved navigation on scroll

--- a/Essen_Blog-Seite.html
+++ b/Essen_Blog-Seite.html
@@ -32,16 +32,19 @@
                 <li><a href="Kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
-        <div class="page-title">
-            <h1>Essen</h1>
-            <p>Essen macht glücklich</p>
-        </div>
     </header>
 
 
 
     <!-- Hauptinhalt -->
     <main>
+
+        <!-- Titel -->
+        <div class="page-title">
+            <h1>Essen</h1>
+            <p>Essen macht glücklich</p>
+        </div>
+        
         <!-- Kacheln -->
         <section class="blog-grid">
             <!-- Kalte Nudeln -->
