--- a/Inspiration_Galerie.html
+++ b/Inspiration_Galerie.html
@@ -32,16 +32,19 @@
                 <li><a href="Kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
-        <div class="page-title">
-            <h1>Inspiration</h1>
-            <p>Lass dich in der Galerie inspirieren</p>
-        </div>
     </header>
 
 
 
     <!-- Hauptinhalt -->
     <main>
+        
+        <!-- Titel -->
+        <div class="page-title">
+            <h1>Inspiration</h1>
+            <p>Lass dich in der Galerie inspirieren</p>
+        </div>
+
         <div class="row">
             <div class="column">
                 <img src="Assets/Taipeh.jpeg"
