--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         <li><a href="Kontakt.html">Kontakt</a></li>
       </ul>
     </nav>
+  </header>
+
+  <!-- Hauptbereich -->
+  <main>
+        
+    <!-- Hero und Titel -->
     <div class="hero">
       <img src="Assets/Heroimage_China.jpeg" alt="Hero-Bild von China mit Stadtansicht" title="Hero-Bild China">
       <div class="hero-text">
@@ -39,10 +45,6 @@
         <p>Die schönsten Reiseziele und das leckerste Essen</p>
       </div>
     </div>
-  </header>
-
-  <!-- Hauptbereich -->
-  <main>
 
     <!-- Über mich -->
     <section class="about-me">
