--- a/Kontakt.html
+++ b/Kontakt.html
@@ -32,9 +32,6 @@
                 <li><a href="Kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
-        <div class="page-title">
-            <h1>Kontakt</h1>
-        </div>
     </header>
 
 
@@ -42,6 +39,11 @@
         <!-- Hauptinhalt -->
         <main>
 
+            <!-- Titel -->
+            <div class="page-title">
+                <h1>Kontakt</h1>
+            </div>
+            
             <!-- Einleitungstext -->
             <section id="contact-intro" aria-labelledby="contact-title">
                 <h2 id="contact-title">Ich freue mich, von dir zu hören</h2>
