feat: add legal imprint (Impressum) page with contact and disclaimer info

--- a/Reisen_Blog-Seite.html
+++ b/Reisen_Blog-Seite.html
@@ -103,7 +103,7 @@
     <footer>
         <nav aria-label="Footer-Navigation">
             <ul>
-                <li><a href="Kontakt.html">Impressum</a></li>
+                <li><a href="Impressum.html">Impressum</a></li>
                 <li><a href="Kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
