--- a/Kontakt.html
+++ b/Kontakt.html
@@ -119,7 +119,7 @@
         <footer>
             <nav aria-label="Footer-Navigation">
                 <ul>
-                    <li><a href="Kontakt.html">Impressum</a></li>
+                    <li><a href="Impressum.html">Impressum</a></li>
                     <li><a href="Kontakt.html">Kontakt</a></li>
                 </ul>
             </nav>
