feat: add to-the-top button with bounce-in animation on scroll

--- a/Impressum.html
+++ b/Impressum.html
@@ -87,6 +87,9 @@
         <p>&copy; 2024 Patrick – 4 Years in China</p>
     </footer>
 
+    <!-- To-the-Top Button -->
+    <button id="toTopBtn" aria-label="Zurück nach oben">Top</button>
+
 </body>
 
 </html>
