--- a/Inspiration_Galerie.html
+++ b/Inspiration_Galerie.html
@@ -137,6 +137,9 @@
         <p>&copy; 2024 Patrick – 4 Years in China</p>
     </footer>
 
+    <!-- To-the-Top Button -->
+    <button id="toTopBtn" aria-label="Zurück nach oben">Top</button>
+
 </body>
 
 </html>
