feat: add automatic hero image carousel to improved visual presentation

--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
 
     <!-- Hero und Titel -->
     <div class="hero">
-      <img src="Assets/Heroimage_China.jpeg" alt="Hero-Bild von China mit Stadtansicht" title="Hero-Bild China">
+      <div class="hero-slider">
+        <img src="Assets/Heroimage_China.jpeg" alt="Hero-Bild von China">
+        <img src="Assets/Korean-Streetfood.jpeg" alt="Streetfood in Korea">
+      </div>
       <div class="hero-text">
         <h1>4 Years in China</h1>
         <p>Die schönsten Reiseziele und das leckerste Essen</p>
       </div>
-    </div>
+    </div>    
 
     <!-- Navigation innerhalb der Seite (Snap-Scrolling) -->
     <section class="snap-intro">
