feat(hero): extend image carousel with third slide for more visual variety

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
     <div class="hero">
       <div class="hero-slider">
         <img src="Assets/Heroimage_China.jpeg" alt="Hero-Bild von China">
-        <img src="Assets/Korean-Streetfood.jpeg" alt="Streetfood in Korea">
+        <img src="Assets/Korean-Streetfood.jpeg" alt="Koreanisches Streetfood mit mariniertem Gemüse, Makirollen und Reisnudeln">
+        <img src="Assets/Sushi-Frühstück.jpeg" alt="Japanisches Sushi-Frühstück mit grünem Tee">
+
       </div>
       <div class="hero-text">
         <h1>4 Years in China</h1>
