--- a/Reisen_Blog-Seite.html
+++ b/Reisen_Blog-Seite.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reisen</title>
+    <link rel="icon" href="Assets/Favicon_China.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 </head>
