feat: add lightbox functionality to gallery with hover effect and accessibility improvements

--- a/Inspiration_Galerie.html
+++ b/Inspiration_Galerie.html
@@ -39,7 +39,7 @@
 
     <!-- Hauptinhalt -->
     <main>
-        
+
         <!-- Titel -->
         <div class="page-title">
             <h1>Inspiration</h1>
@@ -74,8 +74,7 @@
                     title="Shanghai BBQ mit gegrilltem Fleisch, Garnelen und Kichererbsendipp">
             </div>
             <div class="column">
-                <img src="Assets/Bali-Pool.jpeg"
-                    alt="Sonnenliegen neben einem Pool mit Blick auf einen tropischen Wald"
+                <img src="Assets/Bali-Pool.jpeg" alt="Sonnenliegen neben einem Pool mit Blick auf einen tropischen Wald"
                     title="Pool-Terrasse auf Bali mit Blick ins Grüne">
                 <img src="Assets/Fisch.jpeg"
                     alt="Nahaufnahme von zwei Gunkan-Makis mit kleinen weißen Fischen als Füllung"
@@ -109,8 +108,7 @@
                     title="Sonnenuntergang über Suzhou">
                 <img src="Assets/Teeanbau.jpeg" alt="Teefelder auf einem Hügel mit bewaldeten Bergen im Hintergrund"
                     title="Teeplantagen in Asien">
-                <img src="Assets/Hainan_Beach.jpeg"
-                    alt="Langer leerer Sandstrand mit Meer und grünen Hügeln auf Hainan"
+                <img src="Assets/Hainan_Beach.jpeg" alt="Langer leerer Sandstrand mit Meer und grünen Hügeln auf Hainan"
                     title="Traumhafter Strand auf Hainan">
                 <img src="Assets/Scharfe-Nudeln.jpeg"
                     alt="Braune Nudelschüssel mit dicken Nudeln, Gemüse, Fleisch und roter Chilipaste"
@@ -140,6 +138,11 @@
 
     <!-- To-the-Top Button -->
     <button id="toTopBtn" aria-label="Zurück nach oben">Top</button>
+    
+    <!-- Lightbox-Overlay -->
+    <div class="lightbox-overlay" id="lightboxOverlay">
+        <img src="" alt="Großansicht">
+    </div>
 
 </body>
 
