style: improve formatting and correct minor spelling errors

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <div class="hero">
       <div class="hero-slider">
         <img src="Assets/Heroimage_China.jpeg" alt="Hero-Bild von China">
-        <img src="Assets/Korean-Streetfood.jpeg" alt="Koreanisches Streetfood mit mariniertem Gemüse, Makirollen und Reisnudeln">
+        <img src="Assets/Korean-Streetfood.jpeg"
+          alt="Koreanisches Streetfood mit mariniertem Gemüse, Makirollen und Reisnudeln">
         <img src="Assets/Sushi-Frühstück.jpeg" alt="Japanisches Sushi-Frühstück mit grünem Tee">
 
       </div>
@@ -50,7 +51,7 @@
         <h1>4 Years in China</h1>
         <p>Die schönsten Reiseziele und das leckerste Essen</p>
       </div>
-    </div>    
+    </div>
 
     <!-- Navigation innerhalb der Seite (Snap-Scrolling) -->
     <section class="snap-intro">
@@ -144,11 +145,16 @@
         <li><a href="Kontakt.html">Kontakt</a></li>
       </ul>
     </nav>
-    <p>&copy; 2024 Patrick – 4 Years in China</p>
+    <p>&copy; 2025 Patrick – 4 Years in China</p>
   </footer>
 
   <!-- To-the-Top Button -->
   <button id="toTopBtn" aria-label="Zurück nach oben">Top</button>
+
+  <!-- Lightbox Overlay (nur sichtbar auf der Galerie-Seite) -->
+  <div id="lightboxOverlay" class="lightbox-overlay" style="display: none;">
+    <img src="" alt="">
+  </div>
 
 </body>
 
