--- a/Impressum.html
+++ b/Impressum.html
@@ -63,14 +63,17 @@
 
                 <h2>Haftungsausschluss</h2>
                 <p>
-                    Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für die Inhalte externer Links.
+                    Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für die Inhalte externer
+                    Links.
                     Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich.
                 </p>
 
                 <h2>Urheberrecht</h2>
                 <p>
-                    Die durch die Seitenbetreiber erstellten Inhalte und Werke auf dieser Website unterliegen dem deutschen Urheberrecht.
-                    Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes
+                    Die durch die Seitenbetreiber erstellten Inhalte und Werke auf dieser Website unterliegen dem
+                    deutschen Urheberrecht.
+                    Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des
+                    Urheberrechtes
                     bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers.
                 </p>
             </div>
@@ -85,7 +88,7 @@
                 <li><a href="Kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
-        <p>&copy; 2024 Patrick – 4 Years in China</p>
+        <p>&copy; 2025 Patrick – 4 Years in China</p>
     </footer>
 
     <!-- To-the-Top Button -->
